--- a/TotalVendor/Info.plist
+++ b/TotalVendor/Info.plist
@@ -36,7 +36,7 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>This app requires access for client location to make sure vendors are in there specified location from their profile to attend video remote interpretation(VRI) and over the phone interpretation (OPI).</string>
+	<string>Total Vendor app need to access you camera for scan QR code and call.</string>
 	<key>NSFaceIDUsageDescription</key>
 	<string>$(PRODUCT_NAME) Authentication with TouchId or FaceID</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
@@ -49,6 +49,11 @@
 	<string>To Upload Vendor Time Finished documents</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>To Upload Vendor Time Finished documents</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>OpenSans-Italic-VariableFont_wdth,wght.ttf</string>
+		<string>OpenSans-VariableFont_wdth,wght.ttf</string>
+	</array>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
